--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,5 @@
-@font-face {
-    font-family: 'Raleway';
-    font-style: normal;
-    font-weight: 200 900;
-    font-display: swap;
-    src: url(https://fonts.gstatic.com/s/raleway/v28/1Ptug8zYS_SKggPNyC0ITw.woff2) format('woff2');
-    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-}
-
-h1, nav  {
+h1,
+nav {
     font-family: Raleway, serif;
     font-weight: normal;
     box-sizing: border-box;
@@ -17,15 +9,12 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: flex-end;
+    padding-top: 20px;
 }
 
 nav ul {
     list-style-type: none;
     display: flex;
-}
-
-nav li {
-    margin-right: 15px;
 }
 
 #logo {
@@ -35,10 +24,10 @@ nav li {
 }
 
 #logo img {
-    height: auto; 
-    width: auto; 
-    max-width: 160px; 
-    max-height: 60px;
+    height: auto;
+    width: auto;
+    max-width: 140px;
+    max-height: 40px;
 }
 
 #main-page {
@@ -47,12 +36,13 @@ nav li {
 }
 
 #main-page nav a {
-    color: #999999;
+    color: #292929;
     text-align: center;
-    padding: 14px 16px;
+    padding: 33px 32px 0;
     text-decoration: none;
 }
+
 #main-page nav a:hover {
     color: #0065FC;
-    border-top: 2px solid #0065FC;
+    border-top: 4px solid #0065FC;
 }
