--- a/css/style.css
+++ b/css/style.css
@@ -1,45 +1,88 @@
+/* Set the font */
 * {
     font-family: 'Raleway', sans-serif;
+    box-sizing: border-box;
 }
 
-header {
+.main-page nav {
+    padding: 35px 35px 0 45px;
     display: flex;
     justify-content: space-between;
-    align-items: flex-end;
-    padding-top: 20px;
 }
 
-nav ul {
+/* Logo size */
+.logo {
+    margin-left: 15px;
+}
+.logo img {
+    width: 100px;
+    height: 50px;
+}
+
+.links ul {
+    display: flex;
+    padding-left: 0px;
+}
+
+.links ul li {
     list-style-type: none;
-    display: flex;
 }
 
-#logo {
-    display: flex;
-    flex-direction: row;
-    align-items: baseline;
-}
-
-#logo img {
-    height: auto;
-    width: auto;
-    max-width: 140px;
-    max-height: 40px;
-}
-
-#main-page {
-    width: 992px;
-    margin: auto;
-}
-
-#main-page nav a {
-    color: #292929;
+.links a {
+    color: #000000;
+    font-size: 15px;
+    padding: 49px 32px 0;
     text-align: center;
-    padding: 33px 32px 0;
     text-decoration: none;
 }
 
-#main-page nav a:hover {
+/* Hover effect */
+.links a:hover {
     color: #0065FC;
-    border-top: 4px solid #0065FC;
+    border-top: 3px solid #0065FC;
+}
+
+.main-page header {
+    padding: 0 45px;
+}
+.main-page header h2 {
+    font-size: 20px;
+    font-weight: 900;
+    margin: 20px 0;
+}
+.main-page header p {
+    font-size: 13px;
+
+}
+
+/* Phone layout */
+@media all and (max-width: 767px) {
+    /* Re-arrange Logo */
+    .logo {
+        padding-left: 30px;
+        margin: auto;
+    }
+
+    .main-page nav {
+        flex-direction: column;
+        align-items: center;
+        padding: 30px 0 0;
+    }
+
+    .links ul {
+        padding-top: 15px;
+    }
+
+    .links ul li {
+        width: 220%;
+        margin: auto;
+        position: relative;
+    }
+
+    .links a {
+        font-size: 16px;
+        font-weight: 200;
+        padding: 0 50px 10px;
+        border-bottom: 3px solid #dcdcdc;
+    }
 }
