--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@
 .logo {
     margin-left: 15px;
 }
+
 .logo img {
     width: 100px;
     height: 50px;
@@ -21,6 +22,8 @@
 
 .links ul {
     display: flex;
+    justify-content: space-evenly;
+    align-items: center;
     padding-left: 0px;
 }
 
@@ -42,14 +45,17 @@
     border-top: 3px solid #0065FC;
 }
 
+/* Header */
 .main-page header {
     padding: 0 45px;
 }
+
 .main-page header h2 {
     font-size: 20px;
     font-weight: 900;
     margin: 20px 0;
 }
+
 .main-page header p {
     font-size: 13px;
 
@@ -57,6 +63,7 @@
 
 /* Phone layout */
 @media all and (max-width: 767px) {
+
     /* Re-arrange Logo */
     .logo {
         padding-left: 30px;
@@ -69,20 +76,27 @@
         padding: 30px 0 0;
     }
 
-    .links ul {
-        padding-top: 15px;
+    .links {
+        width: 100%;
     }
 
-    .links ul li {
-        width: 220%;
-        margin: auto;
-        position: relative;
+    .links ul {
+        padding-top: 15px;
     }
 
     .links a {
         font-size: 16px;
         font-weight: 200;
-        padding: 0 50px 10px;
+        padding: 0 0 10px;
         border-bottom: 3px solid #dcdcdc;
+        width: 50vw;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .links a:hover {
+        border-top: 0px;
+        border-bottom: 3px solid #0065FC;
     }
 }
