--- a/css/style.css
+++ b/css/style.css
@@ -58,7 +58,6 @@
 
 .main-page header p {
     font-size: 16px;
-
 }
 
 .search-form .fa-map-marker-alt {
@@ -98,6 +97,45 @@
     display: none;
 }
 
+/* Filters */
+.main-page .filters {
+    padding: 0 45px 0 45px;
+}
+
+.filters {
+    display: flex;
+    /* Align text and filters */
+    
+    align-items: center;
+}
+
+.filters ul {
+    /* Flex our list so it's inline */
+    display: flex;
+    justify-content: space-around;
+    list-style: none;
+}
+
+
+.filters li a {
+    font-weight: 700;
+    font-size: 14px;
+    border: 2.5px solid #F2F2F2;
+    border-left: none;
+    border-radius: 0 50px 50px 0;
+    padding: 8.35px 21px;
+    text-align: center;
+    text-decoration: none;
+}
+
+.filters .icon {
+    background-color: #DEEBFF;
+    color: #0065FC;
+    padding: 12px;
+    border-radius: 50%;
+    margin-left: -40px;
+}
+
 /* Phone layout */
 @media all and (max-width: 767px) {
 
@@ -132,7 +170,7 @@
         align-items: center;
     }
 
-    .links a:hover {
+    .links a:active {
         border-top: 0px;
         border-bottom: 3px solid #0065FC;
     }
