--- a/css/style.css
+++ b/css/style.css
@@ -98,43 +98,46 @@
 }
 
 /* Filters */
-.main-page .filters {
+
+.main-page .filter-container {
     padding: 0 45px 0 45px;
 }
 
-.filters {
+.filter-container {
     display: flex;
     /* Align text and filters */
-    
     align-items: center;
+    justify-content: flex-start;
+    grid-gap: 1rem;
 }
 
-.filters ul {
-    /* Flex our list so it's inline */
+.filter-container-element {
     display: flex;
     justify-content: space-around;
-    list-style: none;
-}
-
-
-.filters li a {
-    font-weight: 700;
-    font-size: 14px;
+    align-items: center;
+    height: 50px;
+    border-radius: 50px;
     border: 2.5px solid #F2F2F2;
-    border-left: none;
-    border-radius: 0 50px 50px 0;
-    padding: 8.35px 21px;
-    text-align: center;
-    text-decoration: none;
 }
 
-.filters .icon {
+.filter-container-element-icon {
+    border-radius: 100%;
+    height: 3rem;
+    width: 3rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    right: 3px;
     background-color: #DEEBFF;
     color: #0065FC;
-    padding: 12px;
-    border-radius: 50%;
-    margin-left: -40px;
 }
+
+.filter-container-element-text {
+    font-weight: bold;
+    margin: 0 1rem;
+}
+
 
 /* Phone layout */
 @media all and (max-width: 767px) {
