--- a/css/style.css
+++ b/css/style.css
@@ -138,6 +138,57 @@
     margin: 0 1rem;
 }
 
+.info-container {
+    padding: 35px 45px 0 45px;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+}
+
+.info-container-icon {
+    border-radius: 100%;
+    height: 1.75rem;
+    width: 1.75rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    right: 3px;
+    color: #0065FC;
+    border: 2.5px solid #F2F2F2;
+}
+
+.info-container-text {
+    font-size: 14px;
+    margin: 0 1rem;
+}
+
+.housing-container {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+    width: 60%;
+    background-color: #F2F2F2;
+    border-radius: 15px;
+    margin: 30px 0 0 45px;
+}
+
+.housing-container-text {
+    padding: 2% 5%;
+}
+
+.housing-container-elements {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    padding: 0 5% 5% 5%;
+}
+
+.housing-box-image {
+    border-radius: 15px 15px 0px 0px;
+}
 
 /* Phone layout */
 @media all and (max-width: 767px) {
