--- a/css/style.css
+++ b/css/style.css
@@ -163,31 +163,224 @@
     margin: 0 1rem;
 }
 
+
+.housing {
+    display: flex;
+}
+
 .housing-container {
     display: flex;
     align-items: center;
     justify-content: flex-start;
     flex-wrap: wrap;
-    width: 60%;
+    width: 40%;
     background-color: #F2F2F2;
     border-radius: 15px;
     margin: 30px 0 0 45px;
 }
 
 .housing-container-text {
-    padding: 2% 5%;
+    padding: 0% 4%;
 }
 
 .housing-container-elements {
     width: 100%;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     flex-wrap: wrap;
-    padding: 0 5% 5% 5%;
+}
+
+.housing-container-elements-box {
+    margin: 0 0 30px 0;
+    display: flex;
+    flex-wrap: wrap;
+    width: 30%;
+    height: 200px;
+    background-color: white;
+    border-radius: 20px;
+    box-shadow: rgba(0, 0, 0, 0.15) 0px 5px 15px 0px;
 }
 
 .housing-box-image {
-    border-radius: 15px 15px 0px 0px;
+    width: 100%;
+    height: 60%;
+    border-radius: 20px 20px 0 0;
+    padding: 5px 5px 0 5px;
+    object-fit: cover;
+}
+
+.housing-box-content {
+    width: 100%;
+    height: 35%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding-left: 10px;
+    padding-bottom: 7px;
+}
+
+.housing-box-content-title {
+    font-weight: bold;
+}
+
+.housing-box-content-stars {
+    display: flex;
+    column-gap: 0.1em;
+}
+
+.popular-container {
+    display: flex;
+    flex-wrap: wrap;
+    width: 20%;
+    background-color: #F2F2F2;
+    border-radius: 15px;
+    margin: 30px 0 0 45px;
+}
+
+.popular-container-text {
+    padding: 0% 4%;
+}
+
+.popular-container-elements {
+    width: 100%;
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+}
+
+.popular-container-elements-box {
+    margin: 0 0 30px 0;
+    display: flex;
+    flex-direction: row;
+    width: 90%;
+    height: 125px;
+    background-color: white;
+    border-radius: 20px;
+    box-shadow: rgba(0, 0, 0, 0.15) 0px 5px 15px 0px;
+}
+
+.popular-box-image {
+    width: 120%;
+    height: 100%;
+    border-radius: 20px 0 0 20px;
+    padding: 5px;
+    object-fit: cover;
+}
+
+.popular-box-content {
+    width: 100%;
+    height: 70%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding-bottom: 7px;
+    margin: 9px 0 0 0;
+    padding-left: 5px;
+}
+
+.popular-box-content-title {
+    font-weight: bold;
+}
+
+.popular-box-content-stars {
+    display: flex;
+    column-gap: 0.1em;
+}
+
+.star-blue {
+    font-size: 0.8rem;
+    color: #0065FC;
+}
+
+.star-gray {
+    font-size: 0.8rem;
+    color: #F2F2F2;
+}
+
+.activities-container {
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: space-between;
+    margin: 30px 0 0 45px;
+}
+
+.activities-container-text {
+    padding: 2% 5%;
+}
+
+.activities-container-elements {
+    width: 100%;
+    display: flex;
+    align-items: flex-start;
+    flex-direction: row;
+}
+
+.activities-container-parent {
+    width: 50%;
+    display: flex;
+    flex-flow: column wrap;
+    align-content: space-around;
+    justify-content: flex-start;
+    flex-direction: row;
+
+}
+
+.activites-container-secondary-boxes {
+    display: flex;
+    flex-direction: column;
+    align-content: stretch;
+    justify-content: space-between;
+    margin: 0 0 0 30px;
+    width: 35%;
+}
+
+.activities-container-box {
+    margin: 0 0 30px 0;
+    display: flex;
+    flex-wrap: wrap;
+    background-color: white;
+    border-radius: 20px;
+    box-shadow: rgba(0, 0, 0, 0.15) 0px 5px 15px 0px;
+}
+
+.activity-box-image {
+    width: 100%;
+    height: 90%;
+    border-radius: 20px 20px 0 0;
+    object-fit: cover;
+}
+
+.activity-box-content {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding-left: 10px;
+}
+
+.activity-box-content-title {
+    font-weight: bold;
+}
+
+.activity-box-large {
+    width: 25%;
+    height: 480px;
+}
+
+.activity-box-medium {
+    width: 100%;
+    height: 225px;
+}
+
+.activity-box-small {
+    width: 100%;
+    height: 180px;
+}
+
+.activity-box-medium .activity-box-image {
+    height: 80%;
+}
+.activity-box-small .activity-box-image {
+    height: 80%;
 }
 
 /* Phone layout */
